get and put dictionary entry
